# vpnbot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_RU.md  REVIEW_PROMPT.md  constraints-dev-hashed.txt  constraints-hashed.txt  constraints.txt  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.venv312/: pyvenv.cfg
adapters/: awg_config.py  backup.py  clock.py  dante_users.py  errors.py  file_lock.py  file_ops.py  health_server.py  hysteria_auth_health.py  hysteria_stats.py  id_generator.py  ip_allocator.py  ip_asn.py  mtproxy.py  privileged_helpers.py  shell_runner.py  systemctl.py  validation.py  xray_config.py  xray_stats.py
bot/: app.py  commands.py  container.py  formatters.py  guards.py  messages.py  pagination.py  private_chat.py  rate_limit.py
config/: settings.py
db/: database.py  exceptions.py  schema.sql
deploy/: check-nonroot-helper-mode.py  create-vpn-bot-user.sh  danted-warp.conf  log-scan-ignore.txt  managed-units.list  mtproxy-vpnbot-managed.conf  mtproxy-warp.conf  run-mtproxy-managed  setup-nonroot-helper-mode.sh  ufw-subscription.sh  update-ip2asn.sh  vpn-bot-hy2-auth.service  vpn-bot-ip2asn.service  vpn-bot-ip2asn.timer  vpn-bot-subscription.service  vpn-bot-warp-split.service  vpn-bot.nonroot.example.service  vpn-bot.root-legacy.example.service  vpn-bot.service  vpnbot-hy2-auth.service  vpnbot-warp-split.service  warp-failsafe.service  warp-routes-reassert.service  warp-routes-reassert.timer  warp-routes.service  warp-split.list.example
docs/: configuration.md  configuration.ru.md  deployment.md  deployment.ru.md  hysteria.md  hysteria.ru.md  operations.md  operations.ru.md  proxy.md  proxy.ru.md  subscription.md  subscription.ru.md  warp.md  warp.ru.md  xray-xhttp-inbound.md  xray-xhttp-inbound.ru.md
hy2_auth/: __init__.py  __main__.py  config.py  server.py  store.py
i18n/: __init__.py  en.py  ru.py
models/: access.py  dto.py  enums.py
repositories/: _helpers.py  access_requests.py  announcements.py  audit_log.py  dashboard.py  key_bundles.py  maintenance_settings.py  protocol_modules.py  proxy_accesses.py  proxy_entries.py  server_status_settings.py  traffic_stats.py  trial_requests.py  users.py  vpn_keys.py  warp_settings.py
scripts/: deploy.sh  redeploy.sh  sync-constraints.py  vpn-bot-warp-iface  vpn-bot-warp-install  vpn-bot-warp-routes  vpn-bot-warp-split  vpn-bot-warp-split-apply  vpn-bot-warp-split-state  vpn-bot-warp-status  vpnbot-hy2-warp-mark  vpnbot-warp-iface  vpnbot-warp-install  vpnbot-warp-routes  vpnbot-warp-split  vpnbot-warp-split-apply  vpnbot-warp-split-state  vpnbot-warp-status  warp-failsafe
services/: access_approval.py  announcements.py  anomaly_detection.py  audit.py  auto_refresh.py  awg.py  backend_health.py  dashboard.py  errors.py  health.py  hysteria.py  key_bundles.py  key_expiry.py  maintenance.py  mtproto.py  notes.py  offsite_backup.py  online_clients.py  protocol_modules.py  proxy.py  scheduled_announcements.py  server_status.py  socks5.py  traffic_stats.py  trial_access.py  user_locks.py  users.py  vpn_keys.py  xray.py
subscription_server/: __init__.py  __main__.py  config.py  render.py  server.py  store.py
tests/: conftest.py  test_access_middleware.py  test_adapter_input_validation.py  test_admin_review_hardening.py  test_announcement_segmentation.py  test_anomaly_detection.py  test_audit_failure_transactions_and_note_privacy.py  test_audit_privacy_hardening.py  test_audit_retention.py  test_auto_refresh.py  test_awg_config_adapter.py  test_awg_hardening.py  test_backend_drift_reconciliation.py  test_bot_commands.py  test_bot_pagination.py  test_concurrency.py  test_config_message_lifecycle.py  test_dashboard_traffic.py  test_db_and_access_regressions.py  test_deploy_helper_install.py  test_deploy_manifests_and_security_docs.py  test_deploy_running_not_watched_allowlist.py  test_deploy_schema_gate.py  test_deploy_sigpipe_guard.py  test_documentation_content.py  test_env_file_permissions_and_locking.py  test_env_filesystem_hardening.py  test_env_settings_drift.py  test_followup_hardening.py  test_health_check_service.py  test_high_blockers_and_names.py  test_hy2_auth.py  test_hy2_warp_mark_helper.py  test_hysteria2_auth_health.py  test_hysteria2_integration.py  test_hysteria2_stats.py  test_hysteria_install_config.py  test_i18n_parity.py  test_injection_hardening.py  test_ip_asn.py  (+58 more)
utils/: formatting.py  logging.py  redact.py  spider_x.py  (+1 more)
(+71 files in other folders)
