[project]
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["tests/*", "init_db.py", "main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "adapters.*",
    "bot.*",
    "config.*",
    "db.*",
    "models.*",
    "repositories.*",
    "services.*",
    "utils.*",
]
disallow_untyped_defs = true
