[project]
name = "vpnbot"
requires-python = ">=3.12,<3.13"
version = "2.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
branch = true
omit = ["tests/*", "init_db.py", "main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "aiosqlite.*",
    "aiohttp.*",
    "magic_filter.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "S", "B", "RUF"]
preview = true
ignore = [
    "E241",   # multiple spaces after comma — formatting; dedicate a separate formatting PR
    "E501",   # line too long — dedicate a separate formatting PR
    "RUF001", # ambiguous unicode character — project intentionally uses Cyrillic strings
    "RUF029", # async without await — framework handlers must be async even without internal awaits
    "RUF067", # __init__ module logic — i18n design intentional
    "S101",   # assert used in tests and internal invariants
]

# The subprocess (S404/S603/S607) and SQL (S608) suppressions below are scoped to
# the directories that legitimately need them, so the rules still guard the rest of
# the tree (bot/, services/, config/, etc.) against new violations.
[tool.ruff.lint.per-file-ignores]
# f-string SQL in the data-access layer uses only internal column/table constants,
# never user input. Parameterised values always go through placeholders.
"db/*" = ["S608"]
"repositories/*" = ["S608"]
# The non-root deploy preflight shells out to controlled, fixed system tools.
"deploy/*" = ["S404", "S603", "S607"]
# Tests: hardcoded test secrets/paths, subprocess for helper tests (running the
# WARP routes helper against mocked ip/awg/iptables), and pytest-style idioms.
"tests/*" = ["S105", "S106", "S108", "S404", "S603", "S607", "F401", "B009", "B010", "RUF043", "RUF015", "RUF100", "E303", "E306", "E402"]
